[tool.poetry]
name = "accelerator-benchmarks"
version = "0.1.0"
description = "Accelerator Benchmark"
authors = ["Bowei Zheng <bowei@takemobi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.1"
torchvision = "0.17.1"
transformers = "4.38.2"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
ipywidgets = "^8.1.2"
matplotlib = "^3.8.3"
datasets = "^2.18.0"
evaluate = "^0.4.1"
accelerate = "^0.27.2"
deepspeed = "^0.13.5"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"